--- a/Софт-от-Аддерли.css
+++ b/Софт-от-Аддерли.css
@@ -37,8 +37,8 @@
 
 .u-section-1 .u-btn-5 {
   background-image: none;
-  margin: -45px auto 0 579px;
-  padding: 10px 138px;
+  margin: -45px 111px 0 auto;
+  padding: 10px 139px 10px 138px;
 }
 
 .u-section-1 .u-btn-6 {
@@ -49,8 +49,8 @@
 
 .u-section-1 .u-btn-7 {
   background-image: none;
-  margin: -45px auto 0 447px;
-  padding: 10px 138px 10px 136px;
+  margin: -45px 365px 0 auto;
+  padding: 10px 137px;
 }
 
 .u-section-1 .u-btn-8 {
@@ -73,7 +73,7 @@
 
 .u-section-1 .u-btn-11 {
   background-image: none;
-  margin: -45px auto 0 758px;
+  margin: -45px 110px 0 auto;
   padding: 10px 61px 10px 60px;
 }
 
@@ -91,7 +91,7 @@
 
 .u-section-1 .u-btn-14 {
   background-image: none;
-  margin: -45px auto 0 482px;
+  margin: -45px 365px 0 auto;
   padding: 10px 47px;
 }
 
@@ -115,8 +115,8 @@
 
 .u-section-1 .u-btn-18 {
   background-image: none;
-  margin: -45px auto 0 786px;
-  padding: 10px 55px 10px 53px;
+  margin: -45px 111px 0 auto;
+  padding: 10px 54px 10px 53px;
 }
 
 .u-section-1 .u-text-2 {
@@ -158,7 +158,7 @@
 
   .u-section-1 .u-btn-5 {
     margin-top: 16px;
-    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-6 {
@@ -168,7 +168,7 @@
 
   .u-section-1 .u-btn-7 {
     margin-top: 16px;
-    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-8 {
@@ -188,7 +188,7 @@
 
   .u-section-1 .u-btn-11 {
     margin-top: 16px;
-    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-12 {
@@ -203,7 +203,7 @@
 
   .u-section-1 .u-btn-14 {
     margin-top: 16px;
-    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-15 {
@@ -223,7 +223,7 @@
 
   .u-section-1 .u-btn-18 {
     margin-top: 16px;
-    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-2 {
@@ -261,20 +261,6 @@
     min-height: 2453px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin-top: 44px;
-    margin-left: 275px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-top: -45px;
-    margin-left: 42px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: 49px;
-  }
-
   .u-section-1 .u-text-2 {
     margin-top: 104px;
   }
@@ -301,33 +287,72 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: 68px;
-    margin-left: auto;
+    margin-left: 56px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -97px;
-    margin-left: auto;
+    margin-left: 59px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 77px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: -2px;
     padding-right: 83px;
     padding-left: 82px;
   }
 
+  .u-section-1 .u-btn-6 {
+    margin-left: 4px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-left: 4px;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-left: 46px;
+  }
+
   .u-section-1 .u-btn-9 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: -2px;
     padding-right: 63px;
     padding-left: 62px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-left: 35px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-left: 32px;
+  }
+
+  .u-section-1 .u-btn-12 {
+    margin-left: 90px;
+  }
+
+  .u-section-1 .u-btn-13 {
+    margin-left: 69px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-left: 21px;
+  }
+
+  .u-section-1 .u-btn-15 {
+    margin-left: 45px;
+  }
+
+  .u-section-1 .u-btn-16 {
+    margin-left: 13px;
   }
 
   .u-section-1 .u-btn-17 {
     margin-left: -2px;
     margin-right: -2px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    margin-left: 46px;
   }
 
   .u-section-1 .u-text-2 {
