--- a/Windows-11-сборки.css
+++ b/Windows-11-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2467px;
+  min-height: 1869px;
 }
 
 .u-section-1 .u-text-1 {
@@ -11,62 +11,212 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 168px auto 0;
+  margin: 12px auto 0;
+}
+
+.u-section-1 .u-image-1 {
+  width: 560px;
+  height: 315px;
+  margin: 30px auto 0 580px;
+}
+
+.u-section-1 .u-image-2 {
+  width: 560px;
+  height: 315px;
+  margin: -314px auto 0 0;
+}
+
+.u-section-1 .u-image-3 {
+  width: 560px;
+  height: 315px;
+  margin: 15px auto 0 0;
+}
+
+.u-section-1 .u-image-4 {
+  width: 560px;
+  height: 315px;
+  margin: -314px auto 0 580px;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 90px 0 0;
-}
-
-.u-section-1 .u-btn-1 {
-  background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 17px auto 0;
+  margin: 30px 0 0;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 1022px auto 0;
+  font-size: 1.5rem;
+  margin: 30px auto 0;
+}
+
+.u-section-1 .u-btn-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 91px auto 0;
 }
 
 .u-section-1 .u-btn-2 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 12px auto 0;
+}
+
+.u-section-1 .u-text-5 {
+  margin: 70px auto 0;
+}
+
+.u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 17px;
+  margin: 6px auto 30px;
   padding: 10px 37px;
 }
 
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2590px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-top: 15px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 15px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-image-2 {
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 20px;
+  }
+}
+
 @media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2546px;
+  }
+
   .u-section-1 .u-text-1 {
     margin-left: 44px;
     margin-right: 44px;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-top: 350px;
+  .u-section-1 .u-image-1 {
+    width: 540px;
+    height: 304px;
   }
 
-  .u-section-1 .u-btn-1 {
-    margin-top: 20px;
+  .u-section-1 .u-image-2 {
+    width: 540px;
+    height: 304px;
+  }
+
+  .u-section-1 .u-image-3 {
+    width: 540px;
+    height: 304px;
+  }
+
+  .u-section-1 .u-image-4 {
+    width: 540px;
+    height: 304px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2098px;
+  }
+
   .u-section-1 .u-text-1 {
     margin-left: 29px;
     margin-right: 29px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 191px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-2 {
+    height: 191px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-3 {
+    height: 191px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    height: 191px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: -2px;
+    margin-right: -2px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: 7px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 101px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: 59px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-left: 59px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-left: 59px;
   }
 }
