--- a/Windows-7-сборки.css
+++ b/Windows-7-сборки.css
@@ -3,11 +3,11 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2111px;
+  min-height: 2151px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 31px auto 0;
+  margin: 32px auto 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -15,43 +15,44 @@
 }
 
 .u-section-1 .u-image-1 {
-  width: 568px;
-  height: 319px;
-  margin: 8px auto 0 0;
+  width: 560px;
+  height: 315px;
+  margin: 31px auto 0 0;
 }
 
 .u-section-1 .u-image-2 {
-  width: 562px;
-  height: 319px;
-  margin: -319px 0 0 auto;
+  width: 560px;
+  height: 315px;
+  margin: -314px 0 0 auto;
 }
 
 .u-section-1 .u-image-3 {
-  width: 570px;
-  height: 319px;
-  margin: 10px auto 0 0;
+  width: 560px;
+  height: 314px;
+  object-position: 0% 50%;
+  margin: 13px auto 0 0;
 }
 
 .u-section-1 .u-image-4 {
-  width: 562px;
-  height: 319px;
-  margin: -319px 0 0 auto;
+  width: 560px;
+  height: 314px;
+  margin: -314px 0 0 auto;
 }
 
 .u-section-1 .u-image-5 {
-  width: 570px;
-  height: 320px;
-  margin: 10px auto 0 0;
+  width: 560px;
+  height: 315px;
+  margin: 13px auto 0 0;
 }
 
 .u-section-1 .u-image-6 {
-  width: 562px;
-  height: 320px;
-  margin: -320px 0 0 auto;
+  width: 560px;
+  height: 315px;
+  margin: -315px 0 0 auto;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 44px auto 0 0;
+  margin: 46px auto 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -87,44 +88,48 @@
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 36px;
+  margin: 6px auto 32px;
   padding: 10px 32px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3077px;
+    min-height: 3169px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 318px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-2 {
-    height: 318px;
-    margin-top: 20px;
+    margin-top: 12px;
     margin-right: auto;
   }
 
   .u-section-1 .u-image-3 {
+    margin-top: 12px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-4 {
-    margin-top: 20px;
+    margin-top: 12px;
     margin-right: auto;
   }
 
   .u-section-1 .u-image-5 {
-    width: 470px;
-    height: 264px;
+    margin-top: 12px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-6 {
-    margin-top: 20px;
+    margin-top: 12px;
     margin-right: auto;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 53px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-btn-1 {
@@ -135,26 +140,16 @@
     margin-left: 510px;
   }
 
+  .u-section-1 .u-text-4 {
+    width: auto;
+  }
+
   .u-section-1 .u-btn-5 {
     margin-bottom: 42px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 3200px;
-  }
-
-  .u-section-1 .u-image-5 {
-    width: 562px;
-    height: 309px;
-  }
-
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-right: 0;
-  }
-
   .u-section-1 .u-btn-1 {
     margin-left: 40px;
   }
@@ -162,146 +157,98 @@
   .u-section-1 .u-btn-2 {
     margin-left: 400px;
   }
-
-  .u-section-1 .u-text-4 {
-    width: auto;
-    margin-top: 23px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-top: 9px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: 9px;
-    margin-bottom: 47px;
-  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3240px;
+    min-height: 3206px;
   }
 
   .u-section-1 .u-image-1 {
     width: 540px;
-    height: 302px;
+    height: 304px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 306px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 540px;
+    height: 304px;
   }
 
   .u-section-1 .u-image-3 {
+    width: 540px;
     height: 303px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-image-4 {
-    height: 307px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 540px;
+    height: 303px;
   }
 
   .u-section-1 .u-image-5 {
-    height: 303px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 540px;
+    height: 304px;
   }
 
   .u-section-1 .u-image-6 {
-    height: 307px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 540px;
+    height: 304px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 29px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 14px;
+    margin-top: 12px;
     margin-left: auto;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 31px;
+    margin-top: 25px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-bottom: 18px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2762px;
+    min-height: 2431px;
   }
 
   .u-section-1 .u-image-1 {
     width: 340px;
-    height: 190px;
+    height: 191px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 190px;
-    width: 100%;
-    margin-right: 0;
-    margin-left: auto;
+    width: 340px;
+    height: 191px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
+    height: 191px;
   }
 
   .u-section-1 .u-image-4 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
+    height: 191px;
   }
 
   .u-section-1 .u-image-5 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
+    height: 191px;
   }
 
   .u-section-1 .u-image-6 {
-    height: 190px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
+    height: 191px;
   }
 
   .u-section-1 .u-btn-1 {
     margin-left: -4px;
     margin-right: -4px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-top: 12px;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-top: 27px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-top: 6px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: 6px;
-    margin-bottom: 60px;
   }
 }
