--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1552px;
+  min-height: 1418px;
 }
 
 .u-section-1 .u-text-1 {
@@ -31,31 +31,31 @@
 }
 
 .u-section-1 .u-btn-3 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  letter-spacing: 0px;
-  background-image: none;
-  margin: -11px 94px 0 auto;
-  padding: 17px 39px 18px 38px;
-}
-
-.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -85px auto 0 135px;
+  margin: -36px auto 0 135px;
   padding: 10px 37px 10px 36px;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px auto 0 378px;
   padding: 10px 37px 10px 36px;
 }
 
+.u-section-1 .u-btn-5 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  letter-spacing: 0px;
+  background-image: none;
+  margin: 48px 94px 0 auto;
+  padding: 17px 39px 18px 38px;
+}
+
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 8px auto 0 135px;
+  margin: -100px auto 0 135px;
   padding: 10px 39px 10px 38px;
 }
 
@@ -66,10 +66,18 @@
   padding: 10px 39px 10px 38px;
 }
 
+.u-section-1 .u-btn-8 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  letter-spacing: 0px;
+  background-image: none;
+  margin: -74px 94px 0 auto;
+  padding: 17px 44px 18px 43px;
+}
+
 .u-section-1 .u-text-3 {
   font-weight: 700;
   font-size: 1.5rem;
-  margin: 141px 81px 0;
+  margin: 155px 81px 0;
 }
 
 .u-section-1 .u-text-4 {
@@ -89,42 +97,42 @@
   margin: 154px auto 0;
 }
 
-.u-section-1 .u-btn-8 {
+.u-section-1 .u-btn-9 {
   align-self: center;
   background-image: none;
   margin: 0 auto;
   padding: 10px 75px 10px 74px;
 }
 
-.u-section-1 .u-btn-9 {
+.u-section-1 .u-btn-10 {
   align-self: center;
   background-image: none;
   margin: 12px auto 0;
   padding: 10px 69px 10px 67px;
 }
 
-.u-section-1 .u-btn-10 {
+.u-section-1 .u-btn-11 {
   align-self: center;
   background-image: none;
   margin: 12px auto 0;
   padding: 10px 47px 10px 46px;
 }
 
-.u-section-1 .u-btn-11 {
+.u-section-1 .u-btn-12 {
   background-image: none;
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 60px;
 }
 
-.u-section-1 .u-btn-12 {
+.u-section-1 .u-btn-13 {
   background-image: none;
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 50px 10px 48px;
 }
 
-.u-section-1 .u-btn-13 {
+.u-section-1 .u-btn-14 {
   background-image: none;
   font-size: 0.875rem;
   align-self: center;
@@ -132,19 +140,23 @@
   padding: 11px 44px 12px 43px;
 }
 
-.u-section-1 .u-btn-14 {
+.u-section-1 .u-btn-15 {
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 95px 10px 94px;
 }
 
-.u-section-1 .u-btn-15 {
+.u-section-1 .u-btn-16 {
   background-image: none;
-  margin: 12px auto 60px;
+  margin: 12px auto 57px;
   padding: 10px 58px 10px 56px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1544px;
+  }
+
   .u-section-1 .u-text-1 {
     width: auto;
     margin-top: 104px;
@@ -166,21 +178,21 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -12px;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-top: -342px;
+    margin-top: -294px;
     margin-left: 231px;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-4 {
     margin-left: 479px;
   }
 
+  .u-section-1 .u-btn-5 {
+    margin-top: 237px;
+    margin-right: auto;
+  }
+
   .u-section-1 .u-btn-6 {
-    margin-top: 9px;
+    margin-top: -288px;
     margin-left: 231px;
   }
 
@@ -188,9 +200,14 @@
     margin-left: 479px;
   }
 
+  .u-section-1 .u-btn-8 {
+    margin-top: 252px;
+    margin-right: auto;
+  }
+
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: 363px;
+    margin-top: 51px;
   }
 
   .u-section-1 .u-text-4 {
@@ -209,7 +226,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1697px;
+    min-height: 1674px;
   }
 
   .u-section-1 .u-text-1 {
@@ -231,20 +248,20 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-top: -318px;
+    margin-top: -258px;
     margin-left: 123px;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-4 {
     margin-left: 368px;
   }
 
+  .u-section-1 .u-btn-5 {
+    margin-top: 213px;
+  }
+
   .u-section-1 .u-btn-6 {
-    margin-top: 11px;
+    margin-top: -262px;
     margin-left: 123px;
   }
 
@@ -252,9 +269,13 @@
     margin-left: 368px;
   }
 
+  .u-section-1 .u-btn-8 {
+    margin-top: 226px;
+  }
+
   .u-section-1 .u-text-3 {
     width: 558px;
-    margin-top: 443px;
+    margin-top: 157px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -263,8 +284,8 @@
     margin-top: 99px;
   }
 
-  .u-section-1 .u-btn-15 {
-    margin-bottom: 23px;
+  .u-section-1 .u-btn-16 {
+    margin-bottom: 0;
   }
 }
 
@@ -284,21 +305,21 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -10px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-top: -320px;
+    margin-top: -270px;
     margin-left: 34px;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-4 {
     margin-top: -99px;
     margin-left: 276px;
   }
 
+  .u-section-1 .u-btn-5 {
+    margin-top: 269px;
+  }
+
   .u-section-1 .u-btn-6 {
-    margin-top: 63px;
+    margin-top: -266px;
     margin-left: 34px;
   }
 
@@ -307,8 +328,13 @@
     margin-left: 276px;
   }
 
+  .u-section-1 .u-btn-8 {
+    margin-top: 284px;
+  }
+
   .u-section-1 .u-text-3 {
     width: 378px;
+    margin-top: 99px;
   }
 
   .u-section-1 .u-text-4 {
@@ -319,18 +345,14 @@
     margin-top: 90px;
   }
 
-  .u-section-1 .u-btn-8 {
+  .u-section-1 .u-btn-9 {
     margin-top: 11px;
-  }
-
-  .u-section-1 .u-btn-15 {
-    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1808px;
+    min-height: 1785px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -348,21 +370,21 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: 0;
+    margin-top: -416px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -476px;
+    margin-top: 10px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 10px;
-    margin-left: auto;
+    margin-top: 316px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: 10px;
+    margin-top: -366px;
     margin-left: auto;
   }
 
@@ -371,9 +393,13 @@
     margin-left: auto;
   }
 
+  .u-section-1 .u-btn-8 {
+    margin-top: 275px;
+  }
+
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: 370px;
+    margin-top: 35px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -396,13 +422,8 @@
     margin-left: -6px;
   }
 
-  .u-section-1 .u-btn-8 {
-    margin-top: 13px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
   .u-section-1 .u-btn-9 {
+    margin-top: 13px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -418,23 +439,27 @@
   }
 
   .u-section-1 .u-btn-12 {
-    margin-left: -1px;
-    margin-right: -1px;
-  }
-
-  .u-section-1 .u-btn-13 {
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-14 {
+  .u-section-1 .u-btn-13 {
     margin-left: -1px;
     margin-right: -1px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-btn-15 {
     margin-left: -1px;
     margin-right: -1px;
-    margin-bottom: 23px;
+  }
+
+  .u-section-1 .u-btn-16 {
+    margin-left: -1px;
+    margin-right: -1px;
   }
 }
