--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1418px;
+  min-height: 1446px;
 }
 
 .u-section-1 .u-text-1 {
@@ -13,49 +13,49 @@
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 12px auto 0 135px;
-  padding: 10px 45px 10px 43px;
+  margin: 12px auto 0 377px;
+  padding: 10px 25px 10px 24px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 378px;
-  padding: 10px 36px 10px 35px;
+  margin: -45px auto 0 136px;
+  padding: 10px 45px 10px 43px;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 3rem;
   font-weight: 700;
-  margin: -31px 120px 0 auto;
+  margin: -45px 120px 0 auto;
 }
 
 .u-section-1 .u-btn-3 {
-  background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -36px auto 0 135px;
-  padding: 10px 37px 10px 36px;
+  letter-spacing: 0px;
+  background-image: none;
+  margin: -12px 94px 0 auto;
+  padding: 17px 44px 18px 43px;
 }
 
 .u-section-1 .u-btn-4 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -70px auto 0 136px;
+  padding: 10px 37px 10px 36px;
+}
+
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px auto 0 378px;
   padding: 10px 37px 10px 36px;
 }
 
-.u-section-1 .u-btn-5 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  letter-spacing: 0px;
-  background-image: none;
-  margin: 48px 94px 0 auto;
-  padding: 17px 39px 18px 38px;
-}
-
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -100px auto 0 135px;
+  margin: 9px auto 0 135px;
   padding: 10px 39px 10px 38px;
 }
 
@@ -70,69 +70,72 @@
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   letter-spacing: 0px;
   background-image: none;
-  margin: -74px 94px 0 auto;
-  padding: 17px 44px 18px 43px;
+  margin: -20px 94px 0 auto;
+  padding: 17px 39px 18px 38px;
+}
+
+.u-section-1 .u-btn-9 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -31px auto 0 378px;
+  padding: 10px 20px;
+}
+
+.u-section-1 .u-btn-10 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0 135px;
+  padding: 10px 36px 10px 35px;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 700;
-  font-size: 1.5rem;
-  margin: 155px 81px 0;
+  font-size: 1.6875rem;
+  margin: 86px 0 0;
 }
 
 .u-section-1 .u-text-4 {
-  font-size: 3rem;
-  font-weight: 700;
-  margin: 35px auto 0;
-}
-
-.u-section-1 .u-text-5 {
-  font-size: 1.875rem;
-  margin: 0 auto;
-}
-
-.u-section-1 .u-text-6 {
   font-size: 2.25rem;
   font-weight: 700;
-  margin: 154px auto 0;
+  margin: 330px auto 0;
 }
 
-.u-section-1 .u-btn-9 {
+.u-section-1 .u-btn-11 {
   align-self: center;
   background-image: none;
   margin: 0 auto;
   padding: 10px 75px 10px 74px;
 }
 
-.u-section-1 .u-btn-10 {
+.u-section-1 .u-btn-12 {
   align-self: center;
   background-image: none;
   margin: 12px auto 0;
   padding: 10px 69px 10px 67px;
 }
 
-.u-section-1 .u-btn-11 {
+.u-section-1 .u-btn-13 {
   align-self: center;
   background-image: none;
   margin: 12px auto 0;
   padding: 10px 47px 10px 46px;
 }
 
-.u-section-1 .u-btn-12 {
+.u-section-1 .u-btn-14 {
   background-image: none;
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 60px;
 }
 
-.u-section-1 .u-btn-13 {
+.u-section-1 .u-btn-15 {
   background-image: none;
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 50px 10px 48px;
 }
 
-.u-section-1 .u-btn-14 {
+.u-section-1 .u-btn-16 {
   background-image: none;
   font-size: 0.875rem;
   align-self: center;
@@ -140,21 +143,21 @@
   padding: 11px 44px 12px 43px;
 }
 
-.u-section-1 .u-btn-15 {
+.u-section-1 .u-btn-17 {
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 95px 10px 94px;
 }
 
-.u-section-1 .u-btn-16 {
+.u-section-1 .u-btn-18 {
   background-image: none;
-  margin: 12px auto 57px;
+  margin: 12px auto 60px;
   padding: 10px 58px 10px 56px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1544px;
+    min-height: 1783px;
   }
 
   .u-section-1 .u-text-1 {
@@ -164,35 +167,35 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 231px;
+    margin-right: 230px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 479px;
+    margin-left: 231px;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
-    margin-top: 227px;
+    margin-top: 229px;
     margin-right: auto;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -294px;
-    margin-left: 231px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: 479px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: 237px;
+    margin-top: 57px;
     margin-right: auto;
   }
 
+  .u-section-1 .u-btn-4 {
+    margin-top: -413px;
+    margin-left: 231px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-left: 479px;
+  }
+
   .u-section-1 .u-btn-6 {
-    margin-top: -288px;
     margin-left: 231px;
   }
 
@@ -201,32 +204,39 @@
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 252px;
+    margin-top: 185px;
     margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: -236px;
+    margin-left: 480px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-left: 231px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: 51px;
+    margin-top: 471px;
+    margin-left: 81px;
+    margin-right: 81px;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
+    margin-top: 301px;
   }
 
-  .u-section-1 .u-text-5 {
-    width: auto;
-  }
-
-  .u-section-1 .u-text-6 {
-    width: auto;
-    margin-top: 47px;
+  .u-section-1 .u-btn-18 {
+    margin-bottom: 29px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1674px;
+    min-height: 1880px;
   }
 
   .u-section-1 .u-text-1 {
@@ -236,221 +246,218 @@
 
   .u-section-1 .u-btn-1 {
     margin-top: 25px;
-    margin-left: 122px;
+    margin-right: 129px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 368px;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 193px;
+    margin-top: 355px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -258px;
-    margin-left: 123px;
+    margin-top: 69px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 368px;
+    margin-top: -551px;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 213px;
+    margin-right: 130px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: -262px;
-    margin-left: 123px;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: 368px;
+    margin-right: 130px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 226px;
+    margin-top: 323px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: -374px;
+    margin-right: 130px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-left: 122px;
   }
 
   .u-section-1 .u-text-3 {
     width: 558px;
-    margin-top: 157px;
+    margin-top: 555px;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-top: 99px;
-  }
-
-  .u-section-1 .u-btn-16 {
-    margin-bottom: 0;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1444px;
+  }
+
   .u-section-1 .u-btn-1 {
     margin-top: 11px;
-    margin-left: 34px;
+    margin-right: auto;
+    margin-left: 278px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 63px;
-    margin-left: 276px;
+    margin-left: 31px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 95px;
+    margin-top: 203px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -270px;
-    margin-left: 34px;
+    margin-top: 59px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -99px;
-    margin-left: 276px;
+    margin-top: -389px;
+    margin-left: 31px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 269px;
+    margin-right: 31px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: -266px;
-    margin-left: 34px;
+    margin-left: 31px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-top: -99px;
-    margin-left: 276px;
+    margin-right: 31px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 284px;
+    margin-top: 161px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: -212px;
+    margin-right: 31px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-left: 31px;
   }
 
   .u-section-1 .u-text-3 {
-    width: 378px;
-    margin-top: 99px;
+    width: auto;
+    margin-top: 335px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-4 {
     margin-top: 19px;
   }
 
-  .u-section-1 .u-text-6 {
-    margin-top: 90px;
+  .u-section-1 .u-btn-11 {
+    margin-top: 11px;
   }
 
-  .u-section-1 .u-btn-9 {
-    margin-top: 11px;
+  .u-section-1 .u-btn-18 {
+    margin-bottom: 19px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1785px;
+    min-height: 1936px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 32px;
+    margin-top: 417px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 230px;
+    margin-top: -430px;
     margin-left: auto;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 75px;
+    margin-top: 442px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -416px;
-    margin-left: auto;
+    margin-top: 69px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: 10px;
+    margin-top: -637px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 316px;
+    margin-top: 10px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: -366px;
+    margin-top: 10px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-7 {
     margin-top: 10px;
-    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 275px;
+    margin-top: 298px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: -293px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-top: -100px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 35px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 441px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 35px;
-    margin-right: -9px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-left: 7px;
-    margin-right: 7px;
-  }
-
-  .u-section-1 .u-text-6 {
     font-size: 3rem;
-    margin-top: 10px;
+    margin-top: 175px;
     margin-right: -10px;
     margin-left: -6px;
   }
 
-  .u-section-1 .u-btn-9 {
+  .u-section-1 .u-btn-11 {
     margin-top: 13px;
     margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-btn-10 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-btn-11 {
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-btn-12 {
     margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-btn-13 {
-    margin-left: -1px;
-    margin-right: -1px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-btn-14 {
     margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-btn-15 {
@@ -459,7 +466,17 @@
   }
 
   .u-section-1 .u-btn-16 {
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-btn-17 {
     margin-left: -1px;
     margin-right: -1px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    margin-left: -1px;
+    margin-right: -1px;
+    margin-bottom: 47px;
   }
 }
