--- a/Windows-Lite-x86-сборки.css
+++ b/Windows-Lite-x86-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1836px;
+  min-height: 1933px;
 }
 
 .u-section-1 .u-text-1 {
@@ -63,40 +63,109 @@
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: -45px auto 29px 264px;
+  margin: -45px auto 0 264px;
+}
+
+.u-section-1 .u-text-4 {
+  margin: 29px auto 0;
+}
+
+.u-section-1 .u-btn-3 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 0 auto 26px;
+  padding: 10px 44px 10px 43px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2888px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-top: 15px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-top: 11px;
+    margin-right: auto;
+  }
+
   .u-section-1 .u-image-3 {
-    margin-left: 380px;
+    margin-top: 11px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 11px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-5 {
+    margin-top: 11px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-6 {
+    margin-top: 11px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 18px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 417px;
+    margin-top: 29px;
+    margin-left: 504px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 64px;
+    margin-left: 151px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 21px;
+    margin-left: 384px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-bottom: 60px;
+    margin-left: 327px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-image-3 {
-    margin-left: 160px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 3050px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 197px;
+    margin-top: 86px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 0;
+    margin-top: -102px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 86px;
+    margin-left: 294px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: auto;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1767px;
+    min-height: 3060px;
   }
 
   .u-section-1 .u-image-1 {
@@ -107,19 +176,16 @@
   .u-section-1 .u-image-2 {
     width: 540px;
     height: 304px;
-    margin-top: -303px;
   }
 
   .u-section-1 .u-image-3 {
     width: 540px;
     height: 304px;
-    margin-left: 0;
   }
 
   .u-section-1 .u-image-4 {
     width: 540px;
     height: 304px;
-    margin-top: -303px;
   }
 
   .u-section-1 .u-image-5 {
@@ -130,17 +196,34 @@
   .u-section-1 .u-image-6 {
     width: 540px;
     height: 303px;
-    margin-top: -303px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 17px;
+    margin-top: 92px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: -108px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 92px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-bottom: 30px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1094px;
+    min-height: 2585px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-1 {
@@ -152,7 +235,6 @@
 
   .u-section-1 .u-image-2 {
     height: 191px;
-    margin-top: -190px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -167,7 +249,6 @@
 
   .u-section-1 .u-image-4 {
     height: 191px;
-    margin-top: -190px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -182,13 +263,24 @@
 
   .u-section-1 .u-image-6 {
     height: 191px;
-    margin-top: -191px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 0;
+    margin-top: 90px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: -105px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 161px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-bottom: 29px;
   }
 }
