--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -7,13 +7,13 @@
 }
 
 .u-section-1 .u-text-1 {
-  margin: 94px auto 0 35px;
+  margin: 78px 33px 0;
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 12px auto 0 377px;
+  margin: 28px auto 0 377px;
   padding: 10px 25px 10px 24px;
 }
 
@@ -27,6 +27,7 @@
 .u-section-1 .u-text-2 {
   font-size: 3rem;
   font-weight: 700;
+  background-image: none;
   margin: -45px 120px 0 auto;
 }
 
