--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -3,17 +3,17 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1446px;
+  min-height: 1489px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 78px 33px 0;
+  margin: 76px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 28px auto 0 377px;
+  margin: 30px auto 0 377px;
   padding: 10px 25px 10px 24px;
 }
 
@@ -165,6 +165,7 @@
     width: auto;
     margin-top: 104px;
     margin-left: auto;
+    margin-right: 33px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -378,7 +379,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1936px;
+    min-height: 1989px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -392,7 +393,7 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 442px;
+    margin-top: 439px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -400,7 +401,7 @@
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -637px;
+    margin-top: -634px;
     margin-left: auto;
   }
 
@@ -420,11 +421,11 @@
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 298px;
+    margin-top: 295px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-top: -293px;
+    margin-top: -290px;
     margin-right: auto;
   }
 
