--- a/FineWork.css
+++ b/FineWork.css
@@ -19,6 +19,7 @@
   font-size: 0.875rem;
   letter-spacing: 1px;
   margin: 254px auto 0;
+  padding: 9px 79px 11px 78px;
 }
 
 .u-section-1 .u-btn-2 {
@@ -28,6 +29,7 @@
   font-size: 0.875rem;
   letter-spacing: 1px;
   margin: 9px auto 0;
+  padding: 10px 51px 10px 50px;
 }
 
 .u-section-1 .u-btn-3 {
@@ -46,6 +48,7 @@
   font-size: 0.875rem;
   letter-spacing: 1px;
   margin: 9px auto 0;
+  padding: 9px 65px 11px;
 }
 
 .u-section-1 .u-btn-5 {
@@ -80,6 +83,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1532px;
+  }
+
   .u-section-1 .u-btn-5 {
     margin-left: 0;
     margin-right: 0;
@@ -93,5 +100,11 @@
   .u-section-1 .u-btn-7 {
     margin-left: -1px;
     margin-right: -1px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 71px;
+    margin-bottom: 18px;
   }
 }
