--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -1,5 +1,6 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/img4.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -149,13 +150,8 @@
     margin-right: auto;
   }
 
-  .u-section-1 .u-text-5 {
-    margin-top: 44px;
-  }
-
   .u-section-1 .u-text-6 {
     width: auto;
-    margin-top: 32px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -175,6 +171,14 @@
 
   .u-section-1 .u-text-1 {
     margin-top: 44px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-top: 44px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 32px;
   }
 
   .u-section-1 .u-btn-5 {
@@ -264,8 +268,9 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: 8px;
-    margin-right: 8px;
+    width: auto;
+    margin-left: 4px;
+    margin-right: 4px;
   }
 
   .u-section-1 .u-image-1 {
