--- a/Windows-7-сборки.css
+++ b/Windows-7-сборки.css
@@ -1,5 +1,6 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/img0.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
