--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -1,5 +1,6 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/img13.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -181,14 +182,14 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2658px;
+    min-height: 2679px;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
     margin-top: 22px;
-    margin-left: 29px;
-    margin-right: 29px;
+    margin-left: 24px;
+    margin-right: 24px;
   }
 
   .u-section-1 .u-text-2 {
