--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -1,9 +1,11 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/img19_1920x1200.jpg");
+  background-position: 50% 50%;
+  background-size: 115%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1489px;
+  min-height: 768px;
 }
 
 .u-section-1 .u-text-1 {
@@ -13,232 +15,157 @@
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 30px auto 0 377px;
+  margin: 40px auto 0 575px;
   padding: 10px 25px 10px 24px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 136px;
+  margin: -45px auto 0 334px;
   padding: 10px 45px 10px 43px;
 }
 
-.u-section-1 .u-text-2 {
-  font-size: 3rem;
-  font-weight: 700;
-  background-image: none;
-  margin: -45px 120px 0 auto;
-}
-
 .u-section-1 .u-btn-3 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  letter-spacing: 0px;
   background-image: none;
-  margin: -12px 94px 0 auto;
-  padding: 17px 44px 18px 43px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 9px auto 0 334px;
+  padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -70px auto 0 136px;
+  margin: -45px auto 0 576px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 378px;
-  padding: 10px 37px 10px 36px;
+  margin: 9px auto 0 333px;
+  padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 135px;
+  margin: -45px auto 0 576px;
   padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 378px;
-  padding: 10px 39px 10px 38px;
-}
-
-.u-section-1 .u-btn-8 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  letter-spacing: 0px;
-  background-image: none;
-  margin: -20px 94px 0 auto;
-  padding: 17px 39px 18px 38px;
-}
-
-.u-section-1 .u-btn-9 {
-  background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -31px auto 0 378px;
+  margin: 9px auto 0 576px;
   padding: 10px 20px;
 }
 
-.u-section-1 .u-btn-10 {
+.u-section-1 .u-btn-8 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 135px;
+  margin: -45px auto 0 333px;
   padding: 10px 36px 10px 35px;
 }
 
-.u-section-1 .u-text-3 {
-  font-weight: 700;
-  font-size: 1.6875rem;
-  margin: 86px 0 0;
+.u-section-1 .u-btn-9 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0 577px;
+  padding: 10px 18px 10px 17px;
 }
 
-.u-section-1 .u-text-4 {
-  font-size: 2.25rem;
-  font-weight: 700;
-  margin: 330px auto 0;
+.u-section-1 .u-btn-10 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0 334px;
+  padding: 10px 50px 10px 49px;
 }
 
 .u-section-1 .u-btn-11 {
-  align-self: center;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 0 auto;
-  padding: 10px 75px 10px 74px;
-}
-
-.u-section-1 .u-btn-12 {
-  align-self: center;
-  background-image: none;
-  margin: 12px auto 0;
-  padding: 10px 69px 10px 67px;
-}
-
-.u-section-1 .u-btn-13 {
-  align-self: center;
-  background-image: none;
-  margin: 12px auto 0;
-  padding: 10px 47px 10px 46px;
-}
-
-.u-section-1 .u-btn-14 {
-  background-image: none;
-  align-self: center;
-  margin: 12px auto 0;
-  padding: 10px 60px;
-}
-
-.u-section-1 .u-btn-15 {
-  background-image: none;
-  align-self: center;
-  margin: 12px auto 0;
-  padding: 10px 50px 10px 48px;
-}
-
-.u-section-1 .u-btn-16 {
-  background-image: none;
-  font-size: 0.875rem;
-  align-self: center;
-  margin: 12px auto 0;
-  padding: 11px 44px 12px 43px;
-}
-
-.u-section-1 .u-btn-17 {
-  align-self: center;
-  margin: 12px auto 0;
-  padding: 10px 95px 10px 94px;
-}
-
-.u-section-1 .u-btn-18 {
-  background-image: none;
-  margin: 12px auto 60px;
-  padding: 10px 58px 10px 56px;
+  margin: 9px auto 60px;
+  padding: 10px 153px 10px 152px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1783px;
+    min-height: 675px;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
-    margin-top: 104px;
-    margin-left: auto;
-    margin-right: 33px;
+    margin-top: 64px;
+    margin-left: 17px;
+    margin-right: 17px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-right: 230px;
+    margin-right: 213px;
     margin-left: auto;
+    padding-right: 23px;
+    padding-left: 22px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 231px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 229px;
-    margin-right: auto;
+    margin-left: 248px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: 57px;
-    margin-right: auto;
+    margin-left: 248px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -413px;
-    margin-left: 231px;
+    margin-right: 214px;
+    margin-left: auto;
+    padding-right: 35px;
+    padding-left: 35px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: 479px;
+    margin-left: 248px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-left: 231px;
+    margin-right: 214px;
+    margin-left: auto;
+    padding-right: 37px;
+    padding-left: 37px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: 479px;
+    margin-right: 213px;
+    margin-left: auto;
+    padding-right: 19px;
+    padding-left: 19px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 185px;
-    margin-right: auto;
+    margin-left: 248px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-top: -236px;
-    margin-left: 480px;
+    margin-right: 214px;
+    margin-left: auto;
+    padding-right: 17px;
+    padding-left: 16px;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-left: 231px;
+    margin-left: 248px;
+    padding-right: 51px;
+    padding-left: 50px;
   }
 
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 471px;
-    margin-left: 81px;
-    margin-right: 81px;
-  }
-
-  .u-section-1 .u-text-4 {
-    width: auto;
-    margin-top: 301px;
-  }
-
-  .u-section-1 .u-btn-18 {
-    margin-bottom: 29px;
+  .u-section-1 .u-btn-11 {
+    margin-right: 214px;
+    padding: 9px 156px 11px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1880px;
+    min-height: 620px;
   }
 
   .u-section-1 .u-text-1 {
@@ -248,70 +175,71 @@
 
   .u-section-1 .u-btn-1 {
     margin-top: 25px;
-    margin-right: 129px;
+    margin-right: 128px;
   }
 
   .u-section-1 .u-btn-2 {
     margin-left: 122px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 355px;
-  }
-
   .u-section-1 .u-btn-3 {
-    margin-top: 69px;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -551px;
-    margin-left: 122px;
+    margin-right: 130px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-right: 130px;
-    margin-left: auto;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-left: 122px;
+    margin-right: 130px;
   }
 
   .u-section-1 .u-btn-7 {
     margin-right: 130px;
-    margin-left: auto;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 323px;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-top: -374px;
     margin-right: 130px;
-    margin-left: auto;
   }
 
   .u-section-1 .u-btn-10 {
     margin-left: 122px;
   }
 
-  .u-section-1 .u-text-3 {
-    width: 558px;
-    margin-top: 555px;
-    margin-left: auto;
-    margin-right: auto;
+  .u-section-1 .u-btn-11 {
+    margin-right: 0;
+    margin-left: 122px;
+    padding-right: 152px;
+    padding-left: 150px;
   }
 }
 
 @media (max-width: 767px) {
+   .u-section-1 {
+    background-size: auto 115%;
+  }
+
   .u-section-1 .u-sheet-1 {
-    min-height: 1444px;
+    min-height: 722px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: 16px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-btn-1 {
     margin-top: 11px;
-    margin-right: auto;
+    margin-right: 34px;
     margin-left: 278px;
   }
 
@@ -319,25 +247,20 @@
     margin-left: 31px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 203px;
-  }
-
   .u-section-1 .u-btn-3 {
-    margin-top: 59px;
+    margin-left: 31px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -389px;
-    margin-left: 31px;
-  }
-
-  .u-section-1 .u-btn-5 {
     margin-right: 31px;
   }
 
-  .u-section-1 .u-btn-6 {
+  .u-section-1 .u-btn-5 {
     margin-left: 31px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-right: 31px;
   }
 
   .u-section-1 .u-btn-7 {
@@ -345,46 +268,40 @@
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 161px;
-  }
-
-  .u-section-1 .u-btn-9 {
-    margin-top: -212px;
-    margin-right: 31px;
-  }
-
-  .u-section-1 .u-btn-10 {
     margin-left: 31px;
   }
 
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 335px;
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-1 .u-btn-9 {
+    margin-right: 32px;
   }
 
-  .u-section-1 .u-text-4 {
-    margin-top: 19px;
+  .u-section-1 .u-btn-10 {
+    margin-left: 30px;
   }
 
   .u-section-1 .u-btn-11 {
-    margin-top: 11px;
-  }
-
-  .u-section-1 .u-btn-18 {
-    margin-bottom: 19px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 157px;
+    padding-bottom: 10px;
+    padding-left: 156px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1989px;
+    min-height: 895px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 24px;
+    margin-right: 24px;
   }
 
   .u-section-1 .u-btn-1 {
     margin-top: 39px;
     margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-2 {
@@ -392,40 +309,38 @@
     margin-left: auto;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 377px;
-  }
-
   .u-section-1 .u-btn-3 {
-    margin-top: 69px;
+    margin-top: 10px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -572px;
-    margin-left: auto;
+    margin-top: 10px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-5 {
     margin-top: 10px;
-    margin-right: auto;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-6 {
     margin-top: 10px;
-    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-top: 10px;
+    margin-top: 65px;
     margin-right: auto;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 233px;
+    margin-top: -100px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-top: -228px;
+    margin-top: 120px;
     margin-right: auto;
   }
 
@@ -434,51 +349,11 @@
     margin-left: auto;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-top: 379px;
-  }
-
-  .u-section-1 .u-text-4 {
-    font-size: 3rem;
-    margin-top: 175px;
-    margin-right: -10px;
-    margin-left: -6px;
-  }
-
   .u-section-1 .u-btn-11 {
-    margin-top: 13px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-12 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-13 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-14 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-15 {
-    margin-left: -1px;
-    margin-right: -1px;
-  }
-
-  .u-section-1 .u-btn-16 {
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-17 {
-    margin-left: -1px;
-    margin-right: -1px;
-  }
-
-  .u-section-1 .u-btn-18 {
-    margin-left: -1px;
-    margin-right: -1px;
-    margin-bottom: 47px;
+    margin-top: 100px;
+    margin-bottom: 45px;
+    padding-right: 78px;
+    padding-bottom: 11px;
+    padding-left: 76px;
   }
 }
